--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,4 @@
-/* Theme Name:Worthy - Free Powerful Theme by HtmlCoder
-Author:HtmlCoder
-Author URI:http://www.htmlcoder.me
-Version:1.0.0
-Created:November 2014
-License:Creative Commons Attribution 3.0 License (https://creativecommons.org/licenses/by/3.0/)
-File Description:Main CSS file of the template */
+/* Description:Main CSS file of the template */
 
 /* Typography
 ----------------------------------------------------------------------------- */
@@ -69,8 +63,12 @@ h4 span {
 a {
 	color: #A7A9AC;
 }
+
+
+
 a:hover {
-	color: #339BEB;
+	color: #A7A9AC;
+	text-decoration: none;
 }
 a:focus,
 a:active {
@@ -84,9 +82,30 @@ img {
 	max-width: 100%;
 	height: auto;
 }
-.list-unstyled li {
-	padding: 5px 0;
+
+.award-image {
+	padding: 3px 15px;
+	width: 140px;
+	height: auto;
 }
+
+.list-unstyled li {
+	padding: 5px 0 5px 25px;
+}
+
+.list-unstyled a {
+	color: #17406C;
+}
+
+.list-unstyled a:hover {
+	color: #A7A9AC;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	-ms-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+
 .list-horizontal {
 	padding: 15px 0;
 }
@@ -158,7 +177,7 @@ blockquote p {
 	z-index: 2;
 }
 .subfooter {
-	background-color: #fafafa;
+	background-color: #f0f0f0;
 	border-top: 1px solid #f3f3f3;
 	border-bottom: 1px solid #f3f3f3;
 	padding: 40px 0;
@@ -303,6 +322,24 @@ blockquote p {
 	margin-bottom: 0;
 }
 
+.disc-text {
+	font-size: 12px;
+}
+
+.subfooter a {
+	color: #333333;
+	text-decoration: none;
+}
+
+.subfooter a:hover {
+	color: #A7A9AC;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	-ms-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+
 /* Template Components
 ----------------------------------------------------------------------------- */
 /* Buttons
@@ -327,8 +364,8 @@ blockquote p {
 }
 .btn-default:hover {
 	color: #ffffff;
-	background-color: #339BEB;
-	border-color: #339BEB;
+	background-color: #A7A9AC;
+	border-color: #A7A9AC;
 }
 
 /* Collapse
@@ -515,7 +552,7 @@ textarea {
 }
 @media (max-width:767px) {
 	.header.navbar-fixed-top {
-		position: absolute;
+		position: fixed;
 	}
 }
 
@@ -545,14 +582,20 @@ textarea {
 	.fixed-header-on .site-name, {
 		display: none;
 	}
-}
+	.header-left, .preston-logo {
+		float: left;
+	}
+	.logo {
+		width: 100px;
+	}
 
+}
 /* Blocks/Widgets
 ----------------------------------------------------------------------------- */
-/* Logo, Site Name, Site Slogan
+/* Logo
 ---------------------------------- */
 .logo {
-	margin: 10px 10px 10px 0;
+	margin: 5px 10px 15px 5px;
 	-webkit-transition: all 0.3s ease-in-out;
 	-moz-transition: all 0.3s ease-in-out;
 	-o-transition: all 0.3s ease-in-out;
@@ -740,4 +783,8 @@ textarea {
 	filter: alpha(opacity=100);
 	-webkit-transform: scale(1);
 	transform: scale(1);
+}
+
+.needs-update {
+	color: red;
 }
