--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,12 @@ blockquote {
 	padding-left: 0;
 	padding-right: 0;
 }
+
+.side-lines {
+	border-left: 1px solid #737373;
+	border-right: 1px solid #737373;
+}
+
 blockquote p {
 	font-size: 14px;
 }
@@ -787,6 +793,21 @@ textarea {
 	filter: alpha(opacity=100);
 	-webkit-transform: scale(1);
 	transform: scale(1);
+}
+
+.portraits {
+	border-radius: 150px;
+	margin-top: 20px;
+	margin-bottom: 30px;
+	width: 18%;
+	min-width: 135px;
+}
+
+.line-separator {
+	margin: auto;
+	margin-top: 12px;
+	margin-bottom: 8px;
+	border-bottom: 2px solid black;
 }
 
 .needs-update {
