--- a/css/style.css
+++ b/css/style.css
@@ -81,10 +81,24 @@ img {
 	height: auto;
 }
 
+.img-limiter {
+	max-height: 285px;
+	margin-bottom: 25px;
+}
+
+.tiny-image {
+	max-width: 350px;
+	margin: 15px;
+}
+
 .award-image {
 	padding: 3px 15px;
 	width: 140px;
 	height: auto;
+}
+
+ul {
+	list-style-type: circle;
 }
 
 .list-unstyled li {
@@ -93,6 +107,24 @@ img {
 
 .list-unstyled a {
 	color: #17406C;
+}
+
+a li {
+	color: #17406C;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	-ms-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+
+a li:hover {
+	color: #A7A9AC;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	-ms-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
 }
 
 .list-unstyled a:hover {
@@ -140,6 +172,10 @@ blockquote p {
 	color: #17406C;
 }
 
+.inst-heading {
+	font-size: 14px;
+}
+
 /* Layout
 ----------------------------------------------------------------------------- */
 .header {
@@ -174,11 +210,18 @@ blockquote p {
 	background-color: rgba(0, 0, 0, 0.55);
 	content: "";
 }
+
 .banner-caption {
 	position: absolute;
-	top: 40%;
+	top: 25%;
 	width: 100%;
 	z-index: 2;
+}
+
+@media (min-width:768px) {
+	.banner-caption {
+	top: 38%;
+	}
 }
 .subfooter {
 	background-color: #f0f0f0;
@@ -273,6 +316,10 @@ blockquote p {
 	border-radius: 5px;
 }
 
+hr {
+	margin: 35px;
+}
+
 /* Misc
 ----------------------------------------------------------------------------- */
 .object-non-visible {
@@ -320,10 +367,22 @@ blockquote p {
 	color: #ffffff;
 }
 .banner-caption h1 {
-	font-size: 60px;
+	font-size: 48px;
 }
+
+.banner-caption p {
+	font-size: 14px;
+}
+
+@media (min-width:768px) {
+	.banner-caption p {
+		font-size: 16px;
+	}
+}
+
 .subfooter p {
 	margin-bottom: 0;
+	font-size: 12px;
 }
 
 .disc-text {
@@ -639,51 +698,6 @@ textarea {
 	text-decoration: none;
 }
 
-/* Social Links
----------------------------------- */
-.social-links {
-	padding: 0;
-	list-style: none;
-	margin: 15px 0;
-}
-.social-links li {
-	margin: 10px 25px 10px 0;
-	display: inline-block;
-	font-size: 36px;
-}
-.social-links li a {
-	color: #333333;
-	-webkit-transition: all 0.2s ease-in-out;
-	-moz-transition: all 0.2s ease-in-out;
-	-o-transition: all 0.2s ease-in-out;
-	-ms-transition: all 0.2s ease-in-out;
-	transition: all 0.2s ease-in-out;
-}
-.social-links li.twitter a:hover {
-	color: #A7A9AC;
-}
-.social-links li.skype a:hover {
-	color: #00aff0;
-}
-.social-links li.linkedin a:hover {
-	color: #0976b4;
-}
-.social-links li.googleplus a:hover {
-	color: #dd4b39;
-}
-.social-links li.youtube a:hover {
-	color: #b31217;
-}
-.social-links li.flickr a:hover {
-	color: #ff0084;
-}
-.social-links li.facebook a:hover {
-	color: #3b5998;
-}
-.social-links li.pinterest a:hover {
-	color: #cb2027;
-}
-
 /* Isotope Items
 ---------------------------------- */
 .filters {
@@ -816,6 +830,16 @@ textarea {
 	margin: 25px;
 	padding: 0 20px;
 	border-radius: 5px;
+}
+
+.subsubfooter {
+	background-color: #f0f0f0;
+}
+
+.subsubfooter p {
+	color: #A7A9AC;
+	font-size: 12px;
+	margin-bottom: 40px;
 }
 
 .needs-update {
