--- a/css/style.css
+++ b/css/style.css
@@ -172,9 +172,9 @@ blockquote p {
 	color: #17406C;
 }
 
-.inst-heading {
+/*.inst-heading {
 	font-size: 14px;
-}
+}*/
 
 /* Layout
 ----------------------------------------------------------------------------- */
