--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,7 @@ a li:hover {
 	margin: 20px 0;
 	list-style: none;
 	font-size: 18px;
+	position: relative;
 }
 .list-icons li {
 	padding: 0 0 15px 0;
@@ -172,6 +173,13 @@ blockquote {
 .side-lines {
 	border-left: 1px solid #737373;
 	border-right: 1px solid #737373;
+}
+
+@media (max-width:991px) {
+	.side-lines {
+		border-left: 0;
+		border-right: 0;
+	}
 }
 
 blockquote p {
@@ -567,6 +575,13 @@ textarea {
 	resize: vertical;
 }
 
+
+@media (max-width:768px) {
+.form-margin {
+	margin-top: 120px;
+}
+}
+
 /* Modals
 ---------------------------------- */
 .modal-content {
@@ -753,7 +768,7 @@ textarea {
 	text-decoration: none;
 }
 
-@media (min-width:768px) {
+@media (min-width:991px) {
 
 .team-placement-adjust {
 	transform: translateY(100px);
@@ -907,4 +922,10 @@ textarea {
 
 .needs-update {
 	color: red;
+}
+
+.broker-img {
+	margin-top: 25px;
+	position: absolute;
+	left: -5px;
 }
